--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
 </head>
 <body>
     <header>
-        <div id="en-tête">
+         <div id="en-tête">
             <div>
                 <img src="img/logo_site_project2.png"  class="logo"   width="80" height="80" alt="">
             </div>
-            <nav>
-                <a href="">Services</a>
-                <a href="">Installation</a>
-                <a href="">Contacts</a>
-                <a href="">Partenaires</a>
-            </nav>
+                <nav>
+                    <a href="">Services</a>
+                    <a href="">Installation</a>
+                    <a href="">Contacts</a>
+                    <a href="">Partenaires</a>
+                </nav>
             </div>
-        <img src="img/maintenancier.jpg"  class="image_page"alt="">
-       
+        </div>
        <div class="grand_title">
         <p><span  class="red"> MI,</span>POUR VOUS APPORTEZ <span class="red">DES</span> <br> SOLUTIONS INNOVENTES </p>
        </div> 
@@ -38,7 +37,7 @@
                 <p>Conseils</p>
             </div>
             <div class="services1_parc">
-                <img src="img/parc_informatique.png" alt="">
+                <img src="img/parc_informatique.png" class="img_parc">
                 <p>Gestion des Parc Informatiques</p>
             </div>
         </div>
